using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class FightCharTab : MonoBehaviour
{
/* Attack/Defense char tab :
 * Little Punch    = 'p'
 * Big Punch       = 'P'
 * Little Kick     = 'k'
 * Big Kick        = 'K'
 * Head            = 'h'
 * Laser           = 'l'
 * Guard Punch     = '1'
 * Guard Kick      = '2'
 * Guard Head      = '3'
 * Guard Laser     = '4'
 */
    public const char LittlePunch = 'p';
    public const char BigPunch = 'P';
    public const char LittleKick = 'k';
    public const char BigKick = 'K';
    public const char Head = 'h';
    public const char Laser = 'l';
    public const char Nothing = 'n';
    public const char GuardPunch = '1';
    public const char GuardKick = '2';
    public const char GuardHead = '3';
    public const char GuardLaser = '4';
}